nfl-game-service/deployment/nfl-game-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfl-game-service-app
spec:
  selector:
    matchLabels:
      run: nfl-game-service-app
  replicas: 1
  template:
    metadata:
      labels:
        run: nfl-game-service-app
    spec:
      containers:
        - name: nfl-game-service
          image: $DOCKER_REPO/nfl-game-service:latest
          ports:
            - containerPort: 8080
