nfl-game-service/deployment/nfl-game-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfl-game-service-svc
  labels:
    run: nfl-game-service-app
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    run: nfl-game-service-app
