nfl-game-service/deployment/nfl-game-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nfl-game-service-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /nfl/game
            pathType: Prefix
            backend:
              service:
                name: nfl-game-service-svc
                port:
                  number: 8080
